Formulario Ejemplo de Login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   provider: ^6.1.2
+  flutter_vector_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,24 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # assets/fonts/Inter-Black.ttf
+  # assets/fonts/Inter-Bold.ttf
+  # assets/fonts/Inter-ExtraBold.ttf
+  # assets/fonts/Inter-ExtraLight.ttf
+  # assets/fonts/Inter-Light.ttf
+  # assets/fonts/Inter-Medium.ttf
+  # assets/fonts/Inter-Regular.ttf
+  # assets/fonts/Inter-SemiBold.ttf
+  # assets/fonts/Inter-Thin.ttf
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
+          style: normal
+        - asset: assets/fonts/Inter-Light.ttf
+          weight: 200 
+        - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 600 
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
